# Robotics

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindEigen3.cmake  Findassimp.cmake  Findconsole_bridge.cmake  Findhpp-fcl.cmake  Findurdfdom.cmake  Findurdfdom_headers.cmake
data/: 2RPlanar.urdf
src/: console_bridge_shim.cpp  main.cpp
